<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/from_label"
                android:text="@string/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/to_label"
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/max_cloud_label"
                android:text="@string/max_cloud_coverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/max_cloud_coverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/max_off_nadir_label"
                android:text="@string/max_off_nadir_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/max_off_nadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resolution_label"
                android:text="@string/resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/resolution_low"
                    android:text="@string/low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/resolution_medium"
                    android:text="@string/medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/resolution_high"
                    android:text="@string/high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/resolution_very_high"
                    android:text="@string/very_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/resolution_super_high"
                    android:text="@string/super_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/resolution_ultra_high"
                    android:text="@string/ultra_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_types_label"
                android:text="@string/product_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/product_type_day"
                    android:text="@string/day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_night"
                    android:text="@string/night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_video"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_sar"
                    android:text="@string/sar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_hyperspectral"
                    android:text="@string/hyperspectral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_multispectral"
                    android:text="@string/multispectral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/product_type_stereo"
                    android:text="@string/stereo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/providers_label"
                android:text="@string/providers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/provider_siwei"
                    android:text="@string/siwei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_satellogic"
                    android:text="@string/satellogic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_umbra"
                    android:text="@string/umbra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_tailwind"
                    android:text="@string/tailwind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_geosat"
                    android:text="@string/geosat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_sentinel2"
                    android:text="@string/sentinel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_sentinel2_creodias"
                    android:text="@string/sentinel2_creodias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_planet"
                    android:text="@string/planet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_impro"
                    android:text="@string/impro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_urban_sky"
                    android:text="@string/urban_sky"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_nsl"
                    android:text="@string/nsl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/provider_vexcel"
                    android:text="@string/vexcel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/open_data_label"
                android:text="@string/open_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/open_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/min_overlap_ratio_label"
                android:text="@string/min_overlap_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/min_overlap_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </LinearLayout>
</ScrollView>