<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:text="@string/skyfi_tasking_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/from_label"
                    android:text="@string/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/to_label"
                    android:text="@string/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/max_cloud_label"
                    android:text="@string/max_cloud_coverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/max_cloud_coverage"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/max_off_nadir_label"
                    android:text="@string/max_off_nadir_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/max_off_nadir"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resolution_label"
                    android:text="@string/resolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <RadioButton
                            android:id="@+id/resolution_high"
                            android:text="@string/high"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/resolution_very_high"
                            android:text="@string/very_high"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/resolution_super_high"
                            android:text="@string/super_high"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/resolution_ultra_high"
                            android:text="@string/ultra_high"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_types_label"
                    android:text="@string/product_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RadioButton
                            android:id="@+id/product_type_day"
                            android:text="@string/day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/product_type_sar"
                            android:text="@string/sar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/product_type_stereo"
                            android:text="@string/stereo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/providers_label"
                    android:text="@string/providers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <RadioButton
                            android:id="@+id/provider_siwei"
                            android:text="@string/siwei"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/provider_satellogic"
                            android:text="@string/satellogic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/provider_umbra"
                            android:text="@string/umbra"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/provider_geosat"
                            android:text="@string/geosat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/provider_planet"
                            android:text="@string/planet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:id="@+id/provider_impro"
                            android:text="@string/impro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/priority"
                    android:text="@string/priority" />

                <TextView
                    android:id="@+id/priority_price"
                    android:text="@string/priority_extra_cost"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>